# dokumen-cli

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  dokumen.yaml  pyproject.toml
.github/workflows/: ci.yml  smoke.yml
docs/: architecture.md  authentication.md  development.md
dokumen/: CLAUDE.md  VERSION  __init__.py  __main__.py  agent_loader.py  agent_object.py  agent_resolver.py  ask_agent.py  cli.py  config.py  create_agent.py  debug.py  explore_agent.py  explore_types.py  file_object.py  loader.py  logging_config.py  mcp_client.py  mcp_tools.py  output_schemas.py  pdf_tree.py  pipeline.py  playwright_tools.py  scaffold.py  scaffold_parser.py  secrets.py  sentry_config.py  setup_runner.py  summary_index.py  test_builder.py  test_object.py  test_scaffold.py  test_suite.py  tool_resolver.py  tool_runtime.py  tools_object.py  tree_search.py  user_tool_overrides.py
dokumen/cli/: __init__.py  coverage_parser.py  formatters.py  helpers.py  output.py
dokumen/context/: __init__.py  archive.py  compactor.py  micro_compact.py
dokumen/coordinator/: __init__.py  api_executor.py  coordinator.py  messaging.py  shared_memory.py  types.py  worker.py
dokumen/distill/: __init__.py  collector.py  exporter.py  types.py
dokumen/eval/: __init__.py  calibration.py  consensus.py  datasets.py  harness.py  metrics.py  types.py
dokumen/memory/: __init__.py  base.py  embeddings.py  extractor.py  mem0_store.py  memdir.py  schemas.py  session_memory.py
dokumen/mimick/: __init__.py
dokumen/planning/: __init__.py  planner.py  types.py
dokumen/prompts/: browser-testing.txt  cross-reference.txt  documentation-validation.txt  executor-system.txt  general.txt  research.txt
dokumen/providers/: __init__.py  anthropic.py  direct_provider.py  dokurouter.py  retry.py
dokumen/sdk/: __init__.py  agent_wrapper.py  base.py  delegate.py  executor.py  hooks.py  judge.py  messages.py  query_runner.py  testing.py  tools.py  types.py
dokumen/skills/: __init__.py  extractor.py  injector.py  link-check.yaml  loader.py  mimick.yaml  qa-check.yaml  store.py  types.py
dokumen/stages/: __init__.py  artifact.py  browser_setup.py  (+8 more)
dokumen_schema/: __init__.py  agent_defs.py  constants.py  models.py  skills.py  suggestions.py
examples/: customer-gitlab-ci.yml
tests/: __init__.py  conftest.py  explore-tool-smoke.test.yaml  mock_provider.py  tool-smoke.test.yaml
(+211 files in other folders)
